# asolaria-omega-omnibit-tournament

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: verify.yml
config/: active-seat.json  base.json
config/seats/: acer.json  liris.json  relic-engine.json  relic.json
contracts/: ARCHITECTURE.hbp  ARCHITECTURE.hbp.sha256  RELIC-LANE.hbp  RELIC-LANE.hbp.sha256
docs/: ARCHITECTURE.md  RELIC-LANE.md
provenance/: SOURCE-LEDGER.hbp  SOURCE-LEDGER.hbp.sha256  reference-pins.json
provenance/receipts/movable-flashlight/: FLASHLIGHT-star_oe9.hbi  FLASHLIGHT-star_oe9.hbp
provenance/receipts/omega-floor/: OMEGA-FLOOR-CODEC-V0-VERIFY.hbi  OMEGA-FLOOR-CODEC-V0-VERIFY.hbp
provenance/receipts/operator-catalog/: OPERATOR-CATALOG.hbp
provenance/receipts/path123/: OMEGA-PATH123-COMPONENT.hbi  OMEGA-PATH123-COMPONENT.hbp
reference/omega-floor-codec-contract-v0/: INTEGRATED-OMEGA-FLOOR-CODEC-CONTRACT.hbp
reference/omega-floor-codec-v0/: omega_floor_codec_v0.rs
reference/omega-hyper-codec-integration-v0/: omega_hyper_codec_v0.rs
reference/omega-operator-catalog-v0/: omega_operator_catalog.rs
reference/omega-path123-v0/: omega_path123.rs
scripts/: verify.py  verify_public_tree.py  verify_receipt_privacy.py  verify_reference_hashes.py
src/asolaria_tournament/: __init__.py  __main__.py  commitment.py  flashlight.py  privacy.py  relic_engine.py  tournament.py
tests/: test_contracts.py  test_movable_flashlight.py  test_relic_engine.py
tools/movable-flashlight/: light_dark_flashlight.py
(+2 files in other folders)
